@@ -427,10 +427,11 @@ $(document).ready(function() {
                                     </li>
                                     <li class="divider"></li>
                                     <li id="mLog"><a id="cLog" href="javascript:SwitchLayout('Log')"><img src="images/log.png"> <span data-i18n="Log">Log</span></a></li>
-                                    <li id="dLogout" class="divider"></li>
-                                    <li id="mLogout"><a id="cLogout" href="javascript:SwitchLayout('Logout')"><img src="images/logout.png"> <span data-i18n="Logout">Logout</span></a></li>
                                 </ul>
                             </li>
+                            <li id="dLogout" class="divider-vertical"></li>
+								<li id="mLogout"><a id="cLogout" href="javascript:SwitchLayout('Logout')" title="Logout"><img src="images/logout.png"></a></li>
+                            <li class="divider-vertical"></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
