@@ -1850,10 +1850,14 @@ function ShowWeathers()
   var tophtm=
         '\t<table class="bannav" id="bannav" border="0" cellpadding="0" cellspacing="0" width="100%">\n' +
         '\t<tr>\n' +
-		'\t  <td align="left"><div id="timesun" /></td>\n' +
+		'\t  <td align="left"><div id="timesun" /></td>\n';
+  if (window.my_config.userrights==2) {
+	tophtm+=
         '\t  <td style="width: 150px;" align="right">\n' +
         '\t    <a class="btnstyle" onclick="AddWeatherDevice();" data-i18n="Add Sensor">Add Sensor</a>\n' +
-        '\t  </td>\n' +
+        '\t  </td>\n';
+  }
+  tophtm+=
         '\t</tr>\n' +
         '\t</table>\n';
   
